feat: develop docker

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ SECRETKEY_REFRESHTOKEN
 SECRETKEY_ACCESSTOKEN
 EXPIRED_ACCESSTOKEN
 EXPRIED_REFRESHTOKEN
+HTTP_URL_HERO=http://localhost:3001/api/internal
